RESOLVED FIXED307930
REGRESSION(307594@main): Use of undeclared identifier 'isTaintedScriptURLBlockable'
https://bugs.webkit.org/show_bug.cgi?id=307930
Summary REGRESSION(307594@main): Use of undeclared identifier 'isTaintedScriptURLBloc...
Jonathan Bedard
Reported 2026-02-14 21:10:35 PST
307594@main broke some watchOS builds.
Attachments
Jonathan Bedard
Comment 1 2026-02-14 21:10:36 PST
Jonathan Bedard
Comment 2 2026-02-14 21:11:20 PST
EWS
Comment 3 2026-02-14 21:18:28 PST
Committed 307606@main (7820f2e9b16a): <https://commits.webkit.org/307606@main> Reviewed commits have been landed. Closing PR #58743 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.