REGRESSION(307594@main): Use of undeclared identifier 'isTaintedScriptURLBlockable' https://bugs.webkit.org/show_bug.cgi?id=307930 rdar://170410351

Unreviewed build fix.

* Source/WebKit/Shared/ScriptTrackingPrivacyFilter.cpp:
(WebKit::ScriptTrackingPrivacyFilter::shouldAllowAccess):
(WebKit::ScriptTrackingPrivacyFilter::shouldBlockRequest):

Canonical link: https://commits.webkit.org/307606@main